feat: header and sidebar

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,2 +1,13 @@
-@import "./base/fonts.scss";
-@import "./base/variables.scss"
+@import './base/fonts.scss';
+@import './base/variables.scss';
+@import './base/reset.scss';
+
+@import './parts/navbars/header.scss';
+
+html {
+    font-family: 'Merriweather', serif;
+}
+
+#main {
+    transition: margin-right .5s;
+}
