feat: created toggle menus

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -3,6 +3,7 @@
 @import './base/reset.scss';
 
 @import './parts/navbars/header.scss';
+@import './parts/accordeon/accordeon-sidebar.scss';
 
 html {
     font-family: 'Merriweather', serif;
