--- a/src/style/parts/navbars/canvas-sidebar.scss
+++ b/src/style/parts/navbars/canvas-sidebar.scss
@@ -16,9 +16,9 @@
     }
 
     &__item {
+        padding: 8px 12px;
 
         a {
-            padding: 8px 8px 8px 32px;
             text-decoration: none;
             font-size: 1rem;
             color: #818181;
